fix: maps showing over nav menu on mobile

--- a/src/sass/layouts/_navigation.scss
+++ b/src/sass/layouts/_navigation.scss
@@ -4,7 +4,7 @@
   background-color: $clr-primary-100;
 
   position: relative;
-  z-index: 1000;
+  z-index: 9999;
 }
 
 .navigation {
